<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

    <com.thirtyeight.thirtyeight.presentation.ui.InputView
            android:id="@+id/full_name_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            app:label="@string/what_is_your_full_name" />

    <com.thirtyeight.thirtyeight.presentation.ui.InputView
            android:id="@+id/birthday_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_inputs"
            android:hint="@string/_04_12_96"
            android:inputType="date"
            app:label="@string/your_date_of_birth"
            app:readOnly="true" />

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/next_button"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:enabled="false"
            android:text="@string/next" />

</LinearLayout>