<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

    <com.thirtyeight.thirtyeight.presentation.ui.InputView
            android:id="@+id/email_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textEmailAddress"
            app:label="@string/your_e_mail" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/send_button"
            style="@style/PrimaryButtonStyle"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:text="@string/send_reset_password_link" />

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            style="@style/RegisterTermsLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/by_signing_to_38_you_agree_to_our_terms_and_privacy_policy" />


</LinearLayout>