<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/page_padding"
        android:scrollbars="none">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.thirtyeight.thirtyeight.presentation.ui.InputView
                android:id="@+id/email_input_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_e_mail"
                android:inputType="textEmailAddress"
                app:label="@string/your_e_mail" />

        <!-- TODO Show password icon -->
        <com.thirtyeight.thirtyeight.presentation.ui.InputView
                android:id="@+id/password_input_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableEnd="@drawable/ic_show_password"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                app:label="@string/your_password" />

        <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                android:id="@+id/login_button"
                style="@style/PrimaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:enabled="false"
                android:text="@string/sign_in" />

        <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                android:id="@+id/forgot_password_button"
                style="@style/NoBackgroundButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:text="@string/forgot_password" />

        <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:layout_weight="1" />

        <LinearLayout
                android:id="@+id/login_with_google_container"
                style="@style/GoogleLoginButtonStyle"
                android:layout_width="match_parent"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_google_login_logo" />

            <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                    style="@style/GoogleLoginTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/sign_in_with_google" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/login_with_facebook_container"
                style="@style/FacebookLoginButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_facebook_login_logo" />

            <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                    style="@style/FacebookLoginTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/sign_in_with_facebook" />


        </LinearLayout>

        <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                style="@style/RegisterTermsLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/by_signing_to_38_you_agree_to_our_terms_and_privacy_policy" />


    </LinearLayout>

</ScrollView>