<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

    <com.thirtyeight.thirtyeight.presentation.ui.InputView
            android:id="@+id/old_password_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            app:label="@string/old_password" />

    <com.thirtyeight.thirtyeight.presentation.ui.InputView
            android:id="@+id/new_password_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_inputs"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            app:label="@string/new_password" />

    <com.thirtyeight.thirtyeight.presentation.ui.InputView
            android:id="@+id/confirm_password_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_inputs"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:label="@string/confirm_password" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/send_button"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:text="@string/confirm" />


</LinearLayout>