<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/result"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="?colorOnBackground"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="13/15" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/next_button"
            style="@style/MechPrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="30dp"
            android:text="@string/next" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/try_again_button"
            style="@style/MechButtonWithPrimaryBorderStyle"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="30dp"
            android:text="@string/try_again"
            android:textColor="?colorPrimary"
            android:textSize="16sp" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/main_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/main_page"
            android:textColor="?colorOnBackground"
            android:textSize="16sp"
            android:textStyle="bold" />

</LinearLayout>