<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_default_bottom_sheet"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/ic_main_char" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/caros_soft_medium"
            android:text="@string/e_mail_was_sent"
            android:textColor="?colorOnBackground"
            android:textSize="16sp" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/caros_soft"
            android:text="@string/please_check_your_e_mail_inbox"
            android:textColor="@color/grey_dark"
            android:textSize="16sp" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/done_button"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:text="@string/done" />

</LinearLayout>