<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

    <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/mech_page_padding"
            android:text="@string/sort_images_correctly"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold" />

    <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="@dimen/mech_page_padding">

        <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                android:id="@+id/false_button"
                style="@style/MechPrimaryButtonStyle"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/false_v" />

        <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                android:id="@+id/true_button"
                style="@style/MechPrimaryButtonStyle"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/true_v" />
    </LinearLayout>

</FrameLayout>