<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/page_padding">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/ic_main_char" />

            <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/caros_soft_heavy"
                    android:text="@string/_38_app"
                    android:textColor="?colorPrimary"
                    android:textSize="36sp" />

            <com.thirtyeight.thirtyeight.presentation.ui.CTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/play_games_and_learn"
                    android:textColor="@color/grey_dark"
                    android:textSize="14sp" />

        </LinearLayout>

    </FrameLayout>

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/sign_in_button"
            style="@style/WhiteButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"
            android:text="@string/i_already_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <com.thirtyeight.thirtyeight.presentation.ui.CTextView
            android:id="@+id/register_button"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:text="@string/get_started"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>